<resources>
    <string name="EN_US">English</string>
    <string name="EN_US_LC">en_US</string>
    <string name="app_name">Weather</string>
    <string name="hello_world">Hello Koutaro!</string>
    <string name="action_reload">Reload</string>
    <string name="action_fullScreen">Full Screen</string>
    <string name="action_custWea">Custom the weather</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="Pref_UseLang">Select Languages</string>
    <string name="Toolbar_Tab1">Day</string>
    <string name="Toolbar_Tab2">Week</string>
    <string name="Toolbar_select">select:</string>
    <string name="wait_text">Please wait&#8230;</string>
    <string name="offLineText" >Device is offline</string>
    <string name="JA_JP">Japanese</string>
    <string name="JA_JP_LC">ja_JP</string>
</resources>
