<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_reload" android:title="@string/action_reload"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_fullScreen" android:title="@string/action_fullScreen"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_custWea" android:title="@string/action_custWea"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
